fixed bugs in telegram bot